<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sensors</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="sensors_desc">Your device features the following sensors:</string>
    <string name="title_activity_sensor">Sensor details</string>
    <string name="sensor_name">Sensor:</string>
    <string name="type">Type:</string>
    <string name="raw_data">Raw data</string>
    <string name="accuracy">Accuracy:</string>
    <string name="title_activity_actuators">Actuators</string>
    <string name="vibrator">Vibrator</string>
	<string name="duration">Duration</string>
	<string name="play_sound">Play sound</string>
	<string name="stop_sound">Stop sound</string>
    
</resources>
