<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SensorActivity" >

    <TextView
        android:id="@+id/sensor_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/type_label"
        android:layout_alignBottom="@+id/type_label"
        android:layout_alignLeft="@+id/sensor_name"
        android:text="Type" />

    <TextView
        android:id="@+id/sensor_accuracy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/accuracy_label"
        android:layout_alignBottom="@+id/accuracy_label"
        android:layout_alignLeft="@+id/sensor_type"
        android:text="Accuracy" />

    <TextView
        android:id="@+id/accuracy_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/type_label"
        android:layout_marginTop="3dp"
        android:text="@string/accuracy"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/type_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/accuracy_label"
        android:layout_below="@+id/name_label"
        android:layout_marginTop="3dp"
        android:text="@string/type"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/type_label"
        android:text="@string/sensor_name"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/raw_data_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/accuracy_label"
        android:layout_below="@+id/accuracy_label"
        android:layout_marginTop="14dp"
        android:text="@string/raw_data"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/sensor_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/name_label"
        android:layout_alignBottom="@+id/name_label"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/name_label"
        android:text="Name" />

    <ListView
        android:id="@+id/raw_data_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/raw_data_label"
        android:layout_below="@+id/raw_data_label"
        android:layout_marginTop="10dp" >
    </ListView>

</RelativeLayout>